--- a/index.html
+++ b/index.html
@@ -1053,13 +1053,13 @@ As the demand for driving courses continues to grow, it has become increasingly 
 <footer>
   <section id="contact" class="contact-section">
     <div class="contact-info">
-      <p><strong>🏫 School Name:</strong> Africa Driving License School - Hawassa</p>
+      <p><strong>🏫 School Name:</strong> Africa Driving Center School - Hawassa</p>
       <p><strong>📍 Address:</strong> Hawassa City, Sidama Region, Ethiopia</p>
       <p><strong>📧 Email:</strong> <a href="mailto:info@africadrivers.com">info@africadrivers.com</a></p>
       <p><strong>☎️ Phone:</strong> +251 91 234 5678</p>
       <p><strong>📠 Fax:</strong> +251 46 220 3344</p>
-      <p><strong>📲 Telegram:</strong> <a href="https://t.me/AfricaDrivingSchool" target="_blank">https://t.me/AfricaDrivingSchool</a></p>
-      <p><strong>📘 Facebook:</strong> <a href="https://web.facebook.com/AfricaDrivingSchoolHawassa" target="_blank">Africa Driving School - Hawassa</a></p>
+      <p><strong>📲 Telegram:</strong> <a href="https://t.me/AfricaDrivingSchool" target="_blank">https://t.me/AfricaDrivingCenter</a></p>
+      <p><strong>📘 Facebook:</strong> <a href="https://web.facebook.com/AfricaDrivingSchoolHawassa" target="_blank">Africa Driving Center - Hawassa</a></p>
       <p><strong>🌐 Website:</strong> <a href="http://www.africadrivers.com" target="_blank">www.africadrivers.com</a></p>
     </div>
     <!-- Branches -->
